Attempt at fixing the table spacing.

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
 	width: 260px;
 }
 
+table download {
+	border:1;
+	cellpadding:"3;
+}
 
 h3 {
 	clear: both;
